tests/src/frontend/visibility/invalid/private_inheritance.sk
base class Parent {
  private fun hello(): void {
    void
  }

  private fun world(): void {
    this.hello()
  }
}

class Child() extends Parent {
  fun fail(): void {
    this.world()
  }
}
